Disable JceSecurity to allow the use of the repackaged BouncyCastle provider (Fixes #163)