@@ -146,6 +146,7 @@
                   <mainClass>net.jsign.JsignCLI</mainClass>
                   <manifestEntries>
                     <Add-Exports>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper</Add-Exports>
+                    <Add-Opens>java.base/javax.crypto</Add-Opens>
                   </manifestEntries>
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
